--- a/.github/workflows/compile-beta-general-kernel.yml
+++ b/.github/workflows/compile-beta-general-kernel.yml
@@ -52,6 +52,7 @@ on:
         options:
           - kernel-config/release/general
           - kernel-config/release/flippy
+          - kernel-config/release/berrybaseboard
           - false
       kernel_patch:
         description: "Set the directory for kernel patches"
