--- a/.github/workflows/compile-flippy-openwrt-kernel.yml
+++ b/.github/workflows/compile-flippy-openwrt-kernel.yml
@@ -79,6 +79,11 @@ on:
         options:
           - clang
           - gcc
+          - gcc-11.3
+          - gcc-12.2
+          - gcc-12.3
+          - gcc-13.2
+          - gcc-13.3
       compress_format:
         description: "Set the initrd compression format"
         required: false
@@ -96,8 +101,9 @@ on:
         type: choice
         options:
           - -flippy
-          - -flippy-90+
-          - -flippy-90+o
+          - -flippy-89+o
+          - -flippy-91+
+          - -flippy-91+o
           - -QXY716
 
 env:
