--- a/.github/workflows/compile-release-general-kernel.yml
+++ b/.github/workflows/compile-release-general-kernel.yml
@@ -13,10 +13,10 @@ on:
       kernel_source:
         description: "Select the kernel source"
         required: false
-        default: "QXY716"
+        default: "liwenjie119"
         type: choice
         options:
-          - QXY716
+          - liwenjie119
           - unifreq
           - codesnas
       kernel_version:
@@ -28,7 +28,7 @@ on:
           - 5.4.y
           - 5.10.y
           - 5.15.y
-          - 6.1.y
+          - 6.12.y
           - 6.6.y
           - 6.1.y_6.6.y
           - 5.15.y_5.10.y
@@ -154,12 +154,12 @@ jobs:
         run: |
           df -hT ${PWD}
           mkdir -p /builder/{kernel,output}
-          ln -sf /builder/kernel /home/runner/work/_actions/QXY716/Fine3399-rk3399-armbian/main/compile-kernel/kernel
-          ln -sf /builder/output /home/runner/work/_actions/QXY716/Fine3399-rk3399-armbian/main/compile-kernel/output
+          ln -sf /builder/kernel /home/runner/work/_actions/liwenjie119/Fine3399-rk3399-armbian/main/compile-kernel/kernel
+          ln -sf /builder/output /home/runner/work/_actions/liwenjie119/Fine3399-rk3399-armbian/main/compile-kernel/output
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Compile the kernel [ ${{ inputs.kernel_version }} ]
-        uses: QXY716/Fine3399-rk3399-armbian@main
+        uses: liwenjie119/Fine3399-rk3399-armbian@main
         if: ${{ steps.mapped.outputs.status }} == 'success' && !cancelled()
         with:
           build_target: kernel
