--- a/.github/workflows/compile-release-general-kernel.yml
+++ b/.github/workflows/compile-release-general-kernel.yml
@@ -29,7 +29,7 @@ on:
           - 5.10.y
           - 5.15.y
           - 6.12.y
-          - 6.6.y
+          - 6.1.y
           - 6.1.y_6.12.y
           - 5.15.y_5.10.y
           - 5.15.y_6.1.y_6.6.y
@@ -85,7 +85,7 @@ on:
           - -summer-growing
           - -autumn-harvesting
           - -winter-storing
-          - -yourname
+          - -liwenjie119
       kernel_config:
         description: "Set the path of kernel .config"
         required: false
